@@ -31,3 +31,5 @@ ver 0.7.1 / 1 Feb 2012
 ver 0.7.2 / 10 Feb 2012
  * do not exit on bad response, it may be temp problem
 
+ver 
+ * fix search for oclHashcat-plus binaries on unix
